# MM_fish

./: .gitignore  README.md  pyproject.toml
backend/app/models/: agent_profile.py  market.py  perpetual.py  simulation.py
backend/app/services/: batch_auction.py  binance_data.py  comparison_engine.py  data_replayer.py  funding_engine.py  liquidation_engine.py  llm_agents.py  llm_client.py  llm_simulation_runner.py  lob_engine.py  market_agents.py  metrics.py  mm_agent.py  persona_generator.py  plan_executor.py  rwa_personas.py  scenario_engine.py  simulation_runner.py  stylized_facts.py
backend/app/utils/: math_utils.py
backend/tests/test_models/: test_market.py  test_perpetual.py  test_simulation.py
backend/tests/test_services/: test_batch_auction.py  test_binance_data.py  test_comparison_engine.py  test_data_replayer.py  test_edge_cases.py  test_funding_engine.py  test_liquidation_engine.py  test_llm_agents.py  test_llm_client.py  test_llm_simulation_runner.py  test_lob_engine.py  test_market_agents.py  test_metrics.py  test_mm_agent.py  test_persona_generator.py  test_plan_executor.py  test_rwa_personas.py  test_scenario_engine.py  test_simulation_runner.py  test_stylized_facts.py
backend/tests/test_utils/: test_math_utils.py
dashboard/: app.py
data/: btcusdt_real_trades.csv  dogeusdt_real_trades.csv  ondousdt_trades.csv
scripts/: download_ondo_data.py  generate_sample_data.py  hands_on.py  run_comparison.py  run_simulation.py
