[project]
name = "mm-fish"
version = "0.1.0"
description = "Helix MM Fish: LLM-Based Heterogeneous Agent Market Simulator"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.0",
    "anthropic>=0.40.0",
    "streamlit>=1.40.0",
    "scipy>=1.12.0",
    "plotly>=5.20.0",
    "pandas>=2.2.0",
    "arch>=7.0.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["backend"]
